[metadata]
name = tinyepubbuilder
version = attr: tinyepubbuilder.__version__

[options]
packages = find:
packages_dir = tinyepubbuilder
install_requires =
    # docutils >= 0.17
    mako >= 1.1
    python-magic >= 0.4
python_requires = >= 3.9

[options.entry_points]
console_scripts =
    tinyepubbuild = tinyepubbuilder.command:main
