[metadata]
name = tinyepubbuilder
version = attr: tinyepubbuilder.__version__
author = Osamu Matsuda
author_email = osmatsuda@gmail.com
description = A tool to make a simple epub package.
long_description = README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
url = https://github.com/osmatsuda/tinyepubbuilder
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Documentation

[options]
packages_dir = tinyepubbuilder
packages = find:
include_package_data = True
install_requires =
    mako >= 1.1
    python-magic >= 0.4
python_requires = >= 3.9

[options.entry_points]
console_scripts =
    tinyepubbuild = tinyepubbuilder.command:main
